objects/BMCServiceDesk__BMC_Memory__c.object
<CustomObject>
    <description>BMC_Memory: CMDB Class</description>
    <fields>
        <fullName>BMCServiceDesk__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FormFactor__c</fullName>
        <label>Form Factor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>ZIP</fullName>
                </value>
                <value>
                    <fullName>SOJ</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>SIMM</fullName>
                </value>
                <value>
                    <fullName>DIMM</fullName>
                </value>
                <value>
                    <fullName>TSOP</fullName>
                </value>
                <value>
                    <fullName>PGA</fullName>
                </value>
                <value>
                    <fullName>RIMM</fullName>
                </value>
                <value>
                    <fullName>SODIMM</fullName>
                </value>
                <value>
                    <fullName>SRIMM</fullName>
                </value>
                <value>
                    <fullName>SMD</fullName>
                </value>
                <value>
                    <fullName>SSMP</fullName>
                </value>
                <value>
                    <fullName>QFP</fullName>
                </value>
                <value>
                    <fullName>TQFP</fullName>
                </value>
                <value>
                    <fullName>SOIC</fullName>
                </value>
                <value>
                    <fullName>LCC</fullName>
                </value>
                <value>
                    <fullName>PLCC</fullName>
                </value>
                <value>
                    <fullName>BGA</fullName>
                </value>
                <value>
                    <fullName>FPBGA</fullName>
                </value>
                <value>
                    <fullName>LGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HotSwappable__c</fullName>
        <label>Hot Swappable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MemoryType__c</fullName>
        <label>Memory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>DRAM</fullName>
                </value>
                <value>
                    <fullName>Synchronous DRAM</fullName>
                </value>
                <value>
                    <fullName>Cache DRAM</fullName>
                </value>
                <value>
                    <fullName>EDO</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>VRAM</fullName>
                </value>
                <value>
                    <fullName>SRAM</fullName>
                </value>
                <value>
                    <fullName>RAM</fullName>
                </value>
                <value>
                    <fullName>ROM</fullName>
                </value>
                <value>
                    <fullName>Flash</fullName>
                </value>
                <value>
                    <fullName>EEPROM</fullName>
                </value>
                <value>
                    <fullName>FEPROM</fullName>
                </value>
                <value>
                    <fullName>EPROM</fullName>
                </value>
                <value>
                    <fullName>CDRAM</fullName>
                </value>
                <value>
                    <fullName>3DRAM</fullName>
                </value>
                <value>
                    <fullName>SDRAM</fullName>
                </value>
                <value>
                    <fullName>SGRAM</fullName>
                </value>
                <value>
                    <fullName>RDRAM</fullName>
                </value>
                <value>
                    <fullName>DDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Removable__c</fullName>
        <label>Removable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Replaceable__c</fullName>
        <label>Replaceable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Speed__c</fullName>
        <label>Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Memory</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_Memory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>